--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="center">
-    <img src="./img/ConectaTrampo" alt="Logo ConectaTrampo"class="logo"  />
+    <img src="./img/ConectaTrampo.png" alt="Logo ConectaTrampo"class="logo"  />
   </header>
 
   <nav>
@@ -105,6 +105,7 @@ Entrar no grupo do WhatsApp
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
