Revise footer information and site purpose
Updated footer content to clarify site purpose and policies.

Signed-off-by: Josisny Karla  <kjosianyk@gmail.com>

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@ Entrar no grupo do WhatsApp
   <footer>
     <div class="footer-content">
       <p>© 2026 — Todos os direitos reservados.</p>
+      Este site apenas organiza e divulga vagas de emprego já publicadas em canais públicos de Uberlândia.<br>
+        Não cobramos pela divulgação nem temos vínculo direto com as empresas listadas.<br>
+        Caso alguma empresa deseje remover ou alterar uma vaga publicada, entre em contato.
       <a class="link-priv" href="privacidade.html" target="_blank">Política de Privacidade</a>
     </div>
   </footer>
@@ -105,6 +108,7 @@ Entrar no grupo do WhatsApp
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
