--- a/vagas04-02.html
+++ b/vagas04-02.html
@@ -66,7 +66,7 @@
 
     footer {
       background-color: #ffd54f;
-      color: #fff;
+      color: #000000;
       padding: 30px 15px;
       text-align: center;
       font-size: 14px;
