Atualizar o vagas04-02.html

--- a/vagas04-02.html
+++ b/vagas04-02.html
@@ -82,7 +82,7 @@
 </head>
 <body>
   <header>
-   //* <img src="./img/ConectaTrampo.PNG" alt="Logo ConectaTrampo" />
+   <!-- <img src="./img/ConectaTrampo.PNG" alt="Logo ConectaTrampo" /> -->
   </header>
 
   <div class="container">
