Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@ confira a aba “Especialize-se” para encontrar oportunidades de aprendizado.<
           <img src="./img/carteiradetrabalho.jpeg" alt="vagas img" class="vagas-img" />
           <h3 class="vagas-subtitulo">Vagas 05/02/2026</h3>
         </a>
+<a href="vagas06-02.html" target="_blank">
+          <img src="./img/carteiradetrabalho.jpeg" alt="vagas img" class="vagas-img" />
+          <h3 class="vagas-subtitulo">Vagas 06/02/2026</h3> </a>
    </section>
 
 
