--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-D3PZTTSYED"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4275592395904487"
      crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4275592395904487"
+     crossorigin="anonymous"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -126,6 +128,7 @@ Entrar no grupo do WhatsApp
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
