--- a/vagas09-02.html
+++ b/vagas09-02.html
@@ -91,6 +91,26 @@
   <p><strong>🚨 Aviso:</strong> Todas as vagas aqui são <strong>gratuitas</strong> e públicas. Não cobramos nada para divulgar e não temos vínculo com as empresas.</p>
   <p>⚠️ <strong>Nunca pague para se candidatar</strong> e não envie documentos pessoais por WhatsApp sem confirmação.</p>
 </section>
+    
+    <div class="vaga">
+    <h3><strong>Auxiliar de Produção ou Logística</strong></h3>
+    <p><strong>Empresa:</strong> Não informada</p>
+    <p><strong>Descrição da vaga:</strong> Atuação em rotinas operacionais de produção e suporte à área de logística.</p>
+    <p><strong>Requisitos:</strong> 
+        Não informados (recomenda-se disposição para trabalho operacional e organização).
+    </p>
+    <p><strong>Salário:</strong> R$ 2.500,00</p>
+    <p><strong>Benefícios:</strong> Não informados.</p>
+    <p><strong>Horário:</strong> Não informado.</p>
+    <p><strong>Local:</strong> Não informado (DDD 11 - Região de São Paulo/Grande SP)</p>
+    <p><strong>Contato:</strong><br>
+        Interessados entrar em contato via WhatsApp: 
+        <a href="https://wa.me/5511962075780" target="_blank">+55 11 96207-5780</a>
+    </p>
+    <div class="como-se-destacar">
+        <strong>Como se destacar:</strong> Demonstrar agilidade em processos manuais e compromisso com normas de segurança do trabalho.
+    </div>
+</div>
 
 <div class="vaga">
     <h3><strong>Auxiliar de Serviços Gerais</strong></h3>
