Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ confira a aba “Especialize-se” para encontrar oportunidades de aprendizado.<
           <img src="./img/carteiradetrabalho.jpeg" alt="vagas img" class="vagas-img" />
           <h3 class="vagas-subtitulo">Vagas 09/02/2026</h3>
         </a>
-
+</sério>
       <section id="divulgue">
         <h2>Divulgue sua Vaga</h2>
         <a href="https://forms.gle/wUnVvDEph2sdc2h48" target="_blank" class="btn-vaga">Divulgue sua Vaga📢</a>
