--- a/formalize.html
+++ b/formalize.html
@@ -46,7 +46,7 @@
     .curso-box h4 {
       font-size: 20px;
       margin-bottom: 10px;
-      color: #663399;
+      color: #ffd54f;
     }
 
     .curso-box p {
@@ -58,8 +58,8 @@
     .botao-curso {
       display: inline-block;
       margin-top: 10px;
-      background-color: #663399;
-      color: #fff;
+      background-color: #ffd54f;
+      color: #222;
       text-decoration: none;
       padding: 10px 20px;
       border-radius: 6px;
@@ -68,7 +68,7 @@
     }
 
     .botao-curso:hover {
-      background-color: #663399;
+      background-color: #ffd54f;
     }
 
     .aviso {
@@ -157,5 +157,6 @@
   </footer>
   </main>
 </body>
+
 
 </html>
