--- a/formalize.html
+++ b/formalize.html
@@ -97,7 +97,7 @@
 </head>
 <body>
   <header class="center">
-    <img src="./img/ConectaTrampo.png" alt="Logo ConectaTrampo" />
+    <img src="./img/ConectaTrampo.PNG" alt="Logo ConectaTrampo" />
   </header>
 
   <main class="container">
@@ -160,3 +160,4 @@
 
 
 </html>
+
