--- a/formalize.html
+++ b/formalize.html
@@ -80,7 +80,7 @@
     }
     
     footer {
-      background-color:#663399;
+      background-color:#d32f2f;
       color: #fff;
       padding: 30px 15px;
       text-align: center;
@@ -160,4 +160,5 @@
 
 
 </html>
+
 
