--- a/formalize.html
+++ b/formalize.html
@@ -58,7 +58,7 @@
     .botao-curso {
       display: inline-block;
       margin-top: 10px;
-      background-color: #ffd54f;
+      background-color: #d32f2f;
       color: #222;
       text-decoration: none;
       padding: 10px 20px;
@@ -160,5 +160,6 @@
 
 
 </html>
+
 
 
