--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@ confira a aba “Especialize-se” para encontrar oportunidades de aprendizado.<
           <img src="./img/carteiradetrabalho.jpeg" alt="vagas img" class="vagas-img" />
           <h3 class="vagas-subtitulo">Vagas 09/02/2026</h3>
         </a>
+        <a href="vagas10-02.html" target="_blank">
+          <img src="./img/carteiradetrabalho.jpeg" alt="vagas img" class="vagas-img" />
+          <h3 class="vagas-subtitulo">Vagas 10/02/2026</h3>
+        </a>
 </section>
       <section id="divulgue">
         <h2>Divulgue sua Vaga</h2>
