Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@ confira a aba “Especialize-se” para encontrar oportunidades de aprendizado.<
           <img src="./img/carteiradetrabalho.jpeg" alt="vagas img" class="vagas-img" />
           <h3 class="vagas-subtitulo">Vagas 11/02/2026</h3>
         </a>
+<a href="vagas12-02.html" target="_blank">
+          <img src="./img/carteiradetrabalho.jpeg" alt="vagas img" class="vagas-img" />
+          <h3 class="vagas-subtitulo">Vagas 12/02/2026</h3>
+       </a>
 </section>
       <section id="divulgue">
         <h2>Divulgue sua Vaga</h2>
