--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@ confira a aba “Especialize-se” para encontrar oportunidades de aprendizado.<
           <img src="./img/carteiradetrabalho.jpeg" alt="vagas img" class="vagas-img" />
           <h3 class="vagas-subtitulo">Vagas 12/02/2026</h3>
        </a>
+<a href="vagas13-02.html" target="_blank">
+          <img src="./img/carteiradetrabalho.jpeg" alt="vagas img" class="vagas-img" />
+          <h3 class="vagas-subtitulo">Vagas 13/02/2026</h3>
+        </a>
 </section>
       <section id="divulgue">
         <h2>Divulgue sua Vaga</h2>
