--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@ confira a aba “Especialize-se” para encontrar oportunidades de aprendizado.<
           <img src="./img/carteiradetrabalho.jpeg" alt="vagas img" class="vagas-img" />
           <h3 class="vagas-subtitulo">Vagas 13/02/2026</h3>
         </a>
+        <a href="vagas18-02.html" target="_blank">
+          <img src="./img/carteiradetrabalho.jpeg" alt="vagas img" class="vagas-img" />
+          <h3 class="vagas-subtitulo">Vagas 18/02/2026</h3>
+        </a>
 </section>
       <section id="divulgue">
         <h2>Divulgue sua Vaga</h2>
@@ -146,6 +150,7 @@ Entrar no grupo do WhatsApp
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
