Fix HTML encoding issues in index.html
Signed-off-by: Josisny Karla  <kjosianyk@gmail.com>

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@ confira a aba “Especialize-se” para encontrar oportunidades de aprendizado.<
           <img src="./img/carteiradetrabalho.jpeg" alt="vagas img" class="vagas-img" />
           <h3 class="vagas-subtitulo">Vagas 18/02/2026</h3>
         </a>
+        <a href="vagas19-02.html" target="_blank">
+          <img src="./img/carteiradetrabalho.jpeg" alt="vagas img" class="vagas-img" />
+          <h3 class="vagas-subtitulo">Vagas 19/02/2026</h3>
+        </a>
 </section>
       <section id="divulgue">
         <h2>Divulgue sua Vaga</h2>
@@ -150,6 +154,7 @@ Entrar no grupo do WhatsApp
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
